<resources>
    <string name="app_name">DateIdeas</string>
    <string name="how_are_you_feeling_today_madasen">How are you feeling today, Madasen?</string>
    <string name="good">Good!</string>
    <string name="adventurous">Adventurous!</string>
    <string name="serene">Serene…</string>
    <string name="anxious">Anxious.</string>
    <string name="daring">Daring!</string>
    <string name="spontaneous">Spontaneous!</string>
    <string name="frustrated">Frustrated…</string>
    <string name="social">Social!</string>
    <string name="inspired">Inspired!!</string>
    <string name="playful">Playful :)</string>
    <string name="productive">Productive!</string>
    <string name="restless">Restless..</string>
    <string name="ice_skating_title">Ice Skating!</string>
    <string name="ice_skating_desc">Come to the wonderful Anaheim ICE to show your stuff on the ice! This is a once in a lifetime opportunity! (Not really xD)</string>
    <string name="mini_golf_title">Mini Golf!</string>
    <string name="mini_golf_desc">Come to Camelot Golfland and race for the longest time at mini golf! This is a previous Madasen-favorite!</string>
    <string name="walk_around_circle_title">Walk Around the Circle!</string>
    <string name="walk_around_circle_desc">Feeling stressed out from a long week studying political science? Walk around the Orange Circle and you never know just what you might find!</string>
    <string name="movie_title">Watch a Movie!</string>
    <string name="movie_desc">Classic date idea, but fun nonetheless! Showtimes are on Google!</string>
    <string name="bowling_title">Bowling!</string>
    <string name="bowling_desc">Partake in this professional sport of rolling a big ball at a bunch of sticks! \n\nIt\'s fun!</string>
    <string name="raegan_library_title">Ronald Raegan Library!</string>
    <string name="raegan_library_desc">The Ronald Raegan Presidential Library may be an hour and a half away, but worth the drive! Order tickets online.</string>
    <string name="stargazing_title">Stargazing!</string>
    <string name="stargazing_desc">This one is simple and more fun than you might expect. Bring a blanket out on a night hike and see the stars together!</string>
    <string name="camera_hike_title">Hike w/ Kodak Camera!</string>
    <string name="camera_hike_desc">Buy a disposable camera for less than $10 and don\'t stop hiking until you fill up the camera with pictures!</string>
    <string name="flea_market_title">Flea Market!</string>
    <string name="flea_market_desc">This one is simple. $10 each, walk around a flea market together and see who can buy the coolest present for the other person!</string>
    <string name="kayak_title">Kayaking!</string>
    <string name="kayak_desc">Find a two-person kayak at Southwind Kayaks! $40 for two hours in a two-person kayak and paddle around Newport Beach to your heart\'s content!</string>
    <string name="find_food_title">Find Random Food!</string>
    <string name="find_food_desc">Here are the rules: Find somewhere to eat without using Maps which is at least 30 minutes away. Make it fun, try somewhere new!</string>
    <string name="beach_title">Head to the Beach!</string>
    <string name="beach_desc">Newport, Huntington, Laguna, Corona Del Mar…I could go on.</string>
    <string name="whale_cruise_title">Whale Watching Cruise!</string>
    <string name="whale_cruise_desc">Surprisingly cheap, this cruise takes you from Newport Beach on a magical ride to see some of nature\'s most magestic creatures…2.5 hours, too!</string>
    <string name="boat_parade_title">Boat Parade of Lights!</string>
    <string name="boat_parade_desc">I don\'t know if there are still any going on, but if there are, look it up!</string>
    <string name="chef_tommy_title">Chef Tommy Madden!</string>
    <string name="chef_tommy_desc">At your service. I shall be your waiter and chef for the evening. What would you like to eat? \n\n(Within reason, please)</string>
    <string name="musical_play_opera_title">Watch a Show!</string>
    <string name="musical_play_opera_desc">I wasn\'t sure what kind of musical/play/opera/whatever you\'d be interested in.</string>
    <string name="concert_title">Go to a Concert!</string>
    <string name="concert_desc">There\'s nothing better for blowing off steam than watching someone pour their heart out on stage.</string>
    <string name="ballroom_dance_title">Ballroom Dance Lessons!</string>
    <string name="ballroom_dance_desc">Alright, I know this one is a little more involved. But I found a place where we could get a few ballroom dance lessons for cheap!</string>
    <string name="slam_poetry_title">Slam Poetry Night!</string>
    <string name="slam_poetry_desc">Okay. So we write insulting poetry in a funny way, find a bar/coffee shop that hosts slam poetry, and go show our stuff! Or..we could also just go watch other people.</string>
    <string name="improv_title">Go to an Improv Show!</string>
    <string name="improv_desc">I know you didn\'t like the improv that Chapman put on, but maybe at a more professional place it could be fun!</string>
    <string name="paper_airplane_title">Paper Airplane Contest!</string>
    <string name="paper_airplane_desc">You know how Jim Miller is six stories high? You know how to make a paper airplanes? \n\n\'Nuff said.</string>
    <string name="paddleboarding_title">Paddle Boarding!</string>
    <string name="paddleboarding_desc">Head over to Newport Beach for a fun time paddle boarding your legs off! I know it\'s intimidating, but it looks like fun! Head to Southwind Kayaks.</string>
    <string name="board_game_title">Board Game Night!</string>
    <string name="board_game_desc">There are plenty of board game options in the Morlan lounge! Scrabble included!</string>
    <string name="pool_party_title">Pool Party!</string>
    <string name="pool_party_desc">You have a pool. Chapman has a pool. We can figure something out and invite a bunch of our friends!</string>
    <string name="volunteer_title">Volunteer!</string>
    <string name="volunteer_desc">I don\'t know the area super well..But my idea was just to find a church or nonprofit that accepts volunteers? Or go to a soup kitchen? What do you think?</string>
    <string name="guitar_night_title">Guitar Night!</string>
    <string name="guitar_night_desc">If you wanna write a song, let\'s write a song. If you wanna play random covers of songs we like, let\'s do that! Or...we could go out to a street corner :)</string>
    <string name="reading_party_title">Reading Party!</string>
    <string name="reading_party_desc">Find a good book (or a textbook) and let\'s just hang out and read in a coffee shop somewhere!</string>
    <string name="study_party_title">Study Party!</string>
    <string name="study_party_desc">If you\'ve just got too much work, and need to be productive, I\'m sure I can find something to do. Coffee shops work, library rooms work. Or Somo 121 :)</string>
    <string name="scavenger_hunt_title">Scavenger Hunt!</string>
    <string name="scavenger_hunt_desc">Okay, okay. This one is a little more involved. But ask Tommy for your first hint.</string>
    <string name="loading0">Loading</string>
    <string name="loading1">Loading.</string>
    <string name="loading2">Loading..</string>
    <string name="loading3">Loading...</string>
    <string name="item_add">Add!</string>
    <string name="item_edit">Edit!</string>
    <string name="no_more_ideas">No New Ideas Here!!</string>
</resources>
