<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.MainActivity"
    android:background="@color/orange">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_how_you_feeling"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:background="@drawable/circle_title"
        android:layout_centerHorizontal="true"
        android:text="@string/how_are_you_feeling_today_madasen"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_good"
        android:layout_toLeftOf="@+id/btn_adventurous"
        android:layout_below="@+id/tv_how_you_feeling"
        android:background="@drawable/circle_good"
        android:textAllCaps="false"
        android:text="@string/good"
        android:onClick="generateDateIdeas"
        android:textSize="12sp"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_adventurous"
        android:layout_below="@+id/tv_how_you_feeling"
        android:background="@drawable/circle_adventurous"
        android:textAllCaps="false"
        android:text="@string/adventurous"
        android:textSize="12sp"
        android:onClick="generateDateIdeas"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_serene"
        android:onClick="generateDateIdeas"
        android:layout_toRightOf="@+id/btn_adventurous"
        android:layout_below="@+id/tv_how_you_feeling"
        android:background="@drawable/circle_serene"
        android:textAllCaps="false"
        android:text="@string/serene"
        android:textSize="12sp"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_anxious"
        android:layout_below="@+id/btn_good"
        android:background="@drawable/circle_anxious"
        android:textAllCaps="false"
        android:layout_toLeftOf="@+id/btn_daring"
        android:text="@string/anxious"
        android:onClick="generateDateIdeas"
        android:textSize="12sp"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_daring"
        android:layout_below="@+id/btn_adventurous"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_daring"
        android:textAllCaps="false"
        android:text="@string/daring"
        android:textSize="12sp"
        android:onClick="generateDateIdeas"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_spontaneous"
        android:layout_toRightOf="@+id/btn_daring"
        android:layout_below="@+id/btn_serene"
        android:background="@drawable/circle_spontaneous"
        android:textAllCaps="false"
        android:text="@string/spontaneous"
        android:textSize="12sp"
        android:onClick="generateDateIdeas"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_frustrated"
        android:layout_below="@+id/btn_anxious"
        android:layout_toLeftOf="@+id/btn_social"
        android:background="@drawable/circle_frustrated"
        android:textAllCaps="false"
        android:text="@string/frustrated"
        android:textSize="12sp"
        android:onClick="generateDateIdeas"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_social"
        android:layout_below="@+id/btn_daring"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_social"
        android:textAllCaps="false"
        android:text="@string/social"
        android:textSize="12sp"
        android:onClick="generateDateIdeas"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_inspired"
        android:layout_toRightOf="@+id/btn_social"
        android:layout_below="@+id/btn_spontaneous"
        android:background="@drawable/circle_inspired"
        android:textAllCaps="false"
        android:text="@string/inspired"
        android:textSize="12sp"
        android:onClick="generateDateIdeas"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_playful"
        android:layout_below="@+id/btn_frustrated"
        android:layout_toLeftOf="@+id/btn_productive"
        android:background="@drawable/circle_playful"
        android:textAllCaps="false"
        android:text="@string/playful"
        android:textSize="12sp"
        android:onClick="generateDateIdeas"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_productive"
        android:layout_below="@+id/btn_social"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_productive"
        android:textAllCaps="false"
        android:text="@string/productive"
        android:textSize="12sp"
        android:onClick="generateDateIdeas"
        />

    <Button
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:id="@+id/btn_restless"
        android:layout_toRightOf="@+id/btn_productive"
        android:layout_below="@+id/btn_inspired"
        android:background="@drawable/circle_restless"
        android:textAllCaps="false"
        android:text="@string/restless"
        android:textSize="12sp"
        android:onClick="generateDateIdeas"
        />

</RelativeLayout>
